--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "object-sizeof": "^1.6.3"
+    "object-sizeof": "^1.6.3",
+    "xml2js": "^0.4.23"
   }
 }
