--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "avro-js": "^1.11.0",
+    "msgpack": "^1.0.3",
     "object-sizeof": "^1.6.3",
     "protobufjs": "^6.11.2",
     "xml2js": "^0.4.23",
